--- a/data-service/Cargo.toml
+++ b/data-service/Cargo.toml
@@ -6,4 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-postgres = "0.19.7"
+prost = "0.12.1"
+tokio = { version = "1.32.0", features = ["full"] }
+tokio-postgres = "0.7.10"
+tonic = "0.10.0"
+
+[build-dependencies]
+tonic-build = "0.10.0"
