--- a/data-service/Cargo.toml
+++ b/data-service/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 prost = "0.12.1"
 rand = "0.8.5"
+sonyflake = "0.2.0"
 tokio = { version = "1.32.0", features = ["full"] }
 tokio-postgres = "0.7.10"
 tonic = "0.10.0"
